--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ function myFunction() {
 <!--OBSAH        -->
     <section id="intro">
     <h1 style="font-weight: 500; font-size:2rem; margin-bottom:0.5rem;">Programátor a fotograf pochybné kvality</h1>
-    <q class="quote">Zde by se hodilo napsat něco chytrého</q>    
+    <q class="quote">Zde by se hodilo napsat něco chytrého.</q>    
     </section>
         <br>
         
