--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@ function myFunction() {
         <br>
         
     <div id="slajdshow">
-    <img id="slajdimg" src="img1.jpg">    
+    <img id="slajdimg" src="img1.jpg">
+<!--    <p id="slajddescription"></p> -->
+    <div id="arrows">
+    <a id="leftarrow">⇐</a>
+    <a id="rightarrow">⇒</a>
+    </div>
     </div>
         
     </body>
