--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@ function myFunction() {
         <br>
         
     <div id="slajdshow">
+    <div id="slajdoverlay"></div>
+    <p id="slajddescription"></p> 
+    <div id="slajdcircles">●○○</div>
     <img id="slajdimg" src="img1.jpg">
-<!--    <p id="slajddescription"></p> -->
     <div id="arrows">
     <a id="leftarrow">⇐</a>
     <a id="rightarrow">⇒</a>
