Slideshow transition fixes
-Slideshow transition fixes
-Attempt to improve loading of images by putting them in HTML file

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ function myFunction() {
     <p id="slajddescription"></p> 
     <div id="slajdcircles">●○○</div>
     <img id="slajdimg" src="img1.jpg">
+    <img src="img2.jpg" class="hideimg">
+    <img src="img3.jpg" class="hideimg">     
     <div id="arrows">
     <a id="leftarrow">⇐</a>
     <a id="rightarrow">⇒</a>
