--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ function myFunction() {
     x.className = "topnav";
   }
 } </script>
-        <script type="text/javascript" defer src="slideshow.js"></script>
+<!--        <script type="text/javascript" defer src="slideshow.js"></script>-->
+        <script type="text/javascript" defer src="new-slideshow.js"></script>
         <script type="text/javascript" defer src="logo-animation.js"></script>
     </head>
     <body>
@@ -39,9 +40,11 @@ function myFunction() {
     <div id="slajdoverlay"></div>
     <p id="slajddescription"></p> 
     <div id="slajdcircles">●○○</div>
+<!--
     <img id="slajdimg" src="img1.jpg">
     <img src="img2.jpg" class="hideimg">
     <img src="img3.jpg" class="hideimg">     
+-->
     <div id="arrows">
     <a id="leftarrow">⇐</a>
     <a id="rightarrow">⇒</a>
