Added About section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Matěj Goitka</title>
+        <meta lang="cs">
         <meta charset="utf-8">
         <link rel="stylesheet" href="stylesheet.css">
          <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -23,14 +24,14 @@ function myFunction() {
     <a id="logo" href="index.html">Matěj Goitka|</a>
     <div id="options">
         <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
-     <a href="#home">O mně</a>
+     <a href="about.html">O mně</a>
      <a href="#news">Fotografie</a>
      <a href="#contact">Kontakt</a>
     </div>
      </navbar>            
     <hr>    
 <!--OBSAH        -->
-    <section id="intro">
+    <section id="intro" class="fade">
     <h1 style="font-weight: 500; font-size:2rem; margin-bottom:0.5rem;">Programátor a fotograf pochybné kvality</h1>
     <q class="quote">Zde by se hodilo napsat něco chytrého.</q>    
     </section>
