Added photogallery section
+ Added photogallery section with
responsive modal image gallery
+ New three images

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function myFunction() {
     <div id="options">
         <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
      <a href="about.html">O mně</a>
-     <a href="#news">Fotografie</a>
+     <a href="photos.html">Fotografie</a>
      <a href="#contact">Kontakt</a>
     </div>
      </navbar>            
