Attempt to fix modalcross on phones
Ignore if not working

--- a/photos.html
+++ b/photos.html
@@ -60,7 +60,7 @@ function myFunction() {
     <a id="leftarrow">⇐</a>
     <a id="rightarrow">⇒</a>
     </div>
-    <span id="modalcross">🗙</span>    
+    <span id="modalcross">X</span>    
     <img src="img1.jpg" id="modalimg"> 
     </div>    
         
