Photo gallery fix, URL extensions, new photos
+Edited Photo section to have links to different genres of photos (only one genre yet)
+Fixed gallery flex (aligning is now central)
+removed .html from URLs (I think)
+New city photos
+Added user-select prefixes for better compatibility with various browsers

--- a/about.html
+++ b/about.html
@@ -24,15 +24,15 @@ function myFunction() {
     <a id="logo" href="index.html">Matěj Goitka|</a>
     <div id="options">
         <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
-     <a href="about.html" style="color:black; font-weight: bold;">O mně</a>
-     <a href="photos.html">Fotografie</a>
+     <a href="about" style="color:black; font-weight: bold;">O mně</a>
+     <a href="photos">Fotografie</a>
      <a href="#contact">Kontakt</a>
     </div>
      </navbar>            
     <hr>    
 <!--OBSAH        -->
     <section id="aboutbox" class="fade">
-    <img src="me2.jpg" id="mephoto">
+    <img src="me2.jpg" loading="lazy" id="mephoto">
     <div id="metextcontainer">
     <h1 id="meheadline">Matěj Goitka – programátor a fotograf</h1>
     <p>Zdravím, jmenuji se Matěj Goitka a jsem sedmnáctiletý student střední průmyslové školy sdělovací techniky.</p>
