--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ function myFunction() {
     <a id="logo" href="index.html">Matěj Goitka|</a>
     <div id="options">
         <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
-     <a href="about.html">O mně</a>
-     <a href="photos.html">Fotografie</a>
+     <a href="about">O mně</a>
+     <a href="photos">Fotografie</a>
      <a href="#contact">Kontakt</a>
     </div>
      </navbar>            
