Changed images loading
Image loading (lazy/eager) is now chosen more wisely than before (I think)

--- a/city.html
+++ b/city.html
@@ -42,17 +42,17 @@ function myFunction() {
     <img src="img4.jpg" loading="eager" class="trymodal" onclick="openModal(0);">
         </div>
         <div class="fotocolumn">
-    <img src="img6.jpg" loading="eager" class="trymodal" onclick="openModal(1);"> 
-    <img src="img8.jpg" loading="eager" class="trymodal" onclick="openModal(3);">
+    <img src="img6.jpg" loading="lazy" class="trymodal" onclick="openModal(1);"> 
+    <img src="img8.jpg" loading="lazy" class="trymodal" onclick="openModal(3);">
         </div>
         <div class="fotocolumn">
-        <img src="img7.jpg" loading="eager" class="trymodal" onclick="openModal(2);"> 
-        <img src="img9.jpg" loading="eager" class="trymodal" onclick="openModal(4)">   
+        <img src="img7.jpg" loading="lazy" class="trymodal" onclick="openModal(2);"> 
+        <img src="img9.jpg" loading="lazy" class="trymodal" onclick="openModal(4)">   
         </div>
         </div>
         <div class="fotorow">
         <div class="fotocolumn">
-        <img src="img5.jpg" loading="eager" class="trymodal" onclick="openModal(5)">    
+        <img src="img5.jpg" loading="lazy" class="trymodal" onclick="openModal(5)">    
         </div>    
     </div>    
     </section>    
