--- a/photos.html
+++ b/photos.html
@@ -34,7 +34,7 @@ function myFunction() {
     <section id="fotobox" class="fade">
     <h1 id="fotoheadline">Fotografie</h1>
     <a href="city" class="genrebox">
-    <img src="img6.jpg" class="genrefoto">        
+    <img src="img6.jpg" loading="eager" class="genrefoto">        
     <span class="genrecaption">CITY</span>    
     </a>    
     </section>
