Deleted lazy/eager loading
Apparently, I don't really understand how it works, so I'm going with default loading this time and hope it'll work.

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@ function myFunction() {
     <hr>    
 <!--OBSAH        -->
     <section id="aboutbox" class="fade">
-    <img src="me2.jpg" loading="lazy" id="mephoto">
+    <img src="me2.jpg" id="mephoto">
     <div id="metextcontainer">
     <h1 id="meheadline">Matěj Goitka – programátor a fotograf</h1>
     <p>Zdravím, jmenuji se Matěj Goitka a jsem sedmnáctiletý student střední průmyslové školy sdělovací techniky.</p>
