--- a/city.html
+++ b/city.html
@@ -39,20 +39,20 @@ function myFunction() {
     <h1 style="text-align: center; font-weight: 500;">City</h1>    
     <div class="fotorow">
         <div class="fotocolumn">
-    <img src="img4.jpg" loading="eager" class="trymodal" onclick="openModal(0);">
+    <img src="img4.jpg" class="trymodal" onclick="openModal(0);">
         </div>
         <div class="fotocolumn">
-    <img src="img6.jpg" loading="lazy" class="trymodal" onclick="openModal(1);"> 
-    <img src="img8.jpg" loading="lazy" class="trymodal" onclick="openModal(3);">
+    <img src="img6.jpg" class="trymodal" onclick="openModal(1);"> 
+    <img src="img8.jpg"  class="trymodal" onclick="openModal(2);">
         </div>
         <div class="fotocolumn">
-        <img src="img7.jpg" loading="lazy" class="trymodal" onclick="openModal(2);"> 
-        <img src="img9.jpg" loading="lazy" class="trymodal" onclick="openModal(4)">   
+        <img src="img7.jpg" class="trymodal" onclick="openModal(3);"> 
+        <img src="img9.jpg" class="trymodal" onclick="openModal(4)">   
         </div>
         </div>
         <div class="fotorow">
         <div class="fotocolumn">
-        <img src="img5.jpg" loading="lazy" class="trymodal" onclick="openModal(5)">    
+        <img src="img5.jpg" class="trymodal" onclick="openModal(5)">    
         </div>    
     </div>    
     </section>    
