Photo headline style, preloading modal images

--- a/city.html
+++ b/city.html
@@ -36,7 +36,7 @@ function myFunction() {
       
     <!-- FOTOGALERIE        -->
     <section id="photogallery" class="fade">
-    <h1 style="text-align: center; font-weight: 500;">City</h1>    
+    <h1 id="genreheadline">City</h1>    
     <div class="fotorow">
         <div class="fotocolumn">
     <img src="img4-mini.jpg" class="trymodal" onclick="openModal(0);">
