Added nature photos
-added nature photos
-changed some genrebox ids to classes in css stylesheet

--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@ function myFunction() {
         <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
      <a href="about" style="color:black; font-weight: bold;">O mně</a>
      <a href="photos">Fotografie</a>
+     <a href="apps">Aplikace</a>        
      <a href="#contact">Kontakt</a>
     </div>
      </navbar>            
