--- a/city.html
+++ b/city.html
@@ -28,6 +28,7 @@ function myFunction() {
         <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
      <a href="about">O mně</a>
      <a href="photos" style="color:black; font-weight: bold;">Fotografie</a>
+     <a href="apps">Aplikace</a>           
      <a href="#contact">Kontakt</a>
     </div>
      </navbar>            
