+added apps section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ function myFunction() {
     <body>
 <!--NAVBAR        -->
     <navbar id="navbar" class="topnav">
-    <a id="logo" href="index.html">Matěj Goitka|</a>
+    <a id="logo" href="goitbit.github.io">Matěj Goitka|</a>
     <div id="options">
         <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
      <a href="about">O mně</a>
