Added links in apps section

--- a/apps.html
+++ b/apps.html
@@ -36,16 +36,20 @@ function myFunction() {
         
     <div id="appsection" class="fade">
         <div id="appbox">
+        <a href="http:\\www.nulahra.wz.cz" target="_blank" class="justlink">    
         <img id="appimg" src="https://o00o.cz/obrazky/PY/XV/GTV-mensi.jpg">
         <img class="techlogo fade" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/600px-JavaScript-logo.png?20120221235433">              
         <h3 id="appheadline">Znič slepičku Koko!</h3>    
         <p id="apptext">JavaScriptová textová hra, ve které hráč rozhoduje za tajného agenta, který má za úkol zničit jednu jistou slepici.</p>
-        </div>  
+        </a> 
+        </div>    
         <div id="appbox">
+        <a href="http:\\www.jautodrom.wz.cz" target="_blank" class="justlink">              
         <img id="appimg" src="https://i.imgur.com/r63zory.png">
         <img class="techlogo fade" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/600px-JavaScript-logo.png?20120221235433">       
         <h3 id="appheadline">Jautodrom!</h3>    
         <p id="apptext">JavaScriptová hra ve které hráč ovládá auto v aréně s lasery a dalšími útočícími auty.</p>
+        </a>
         </div>         
     </div>      
         
