Added dark mode/light mode
Added dark mode and dark mode/light mode switch

--- a/apps.html
+++ b/apps.html
@@ -23,10 +23,11 @@ function myFunction() {
     <navbar id="navbar" class="topnav">
     <a id="logo" href="goitbit.github.io">Matěj Goitka|</a>
     <div id="options">
+    <a id="darkmodeSwitch">Světlý režim</a>         
         <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
      <a href="about">O mně</a>
      <a href="photos">Fotografie</a>
-     <a href="apps" style="color:black; font-weight: bold;">Aplikace</a>        
+     <a href="apps" style="color:var(--font-color); font-weight: bold;">Aplikace</a>        
      <a href="#contact">Kontakt</a>
     </div>
      </navbar>            
