--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@ function myFunction() {
   } else {
     x.className = "topnav";
   }
-} </script>
+} 
+    </script>
 <!--        <script type="text/javascript" defer src="slideshow.js"></script>-->
         <script type="text/javascript" defer src="new-slideshow.js"></script>
         <script type="text/javascript" defer src="logo-animation.js"></script>
+        <script type="text/javascript" defer src="darkmode.js"></script>           
     </head>
     <body>
 <!--NAVBAR        -->
     <navbar id="navbar" class="topnav">
     <a id="logo" href="goitbit.github.io">Matěj Goitka|</a>
     <div id="options">
-        <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
+    <a id="darkmodeSwitch">Světlý režim</a>  
+        <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>      
      <a href="about">O mně</a>
      <a href="photos">Fotografie</a>
      <a href="apps">Aplikace</a>    
