--- a/about.html
+++ b/about.html
@@ -23,8 +23,9 @@ function myFunction() {
     <navbar id="navbar" class="topnav">
     <a id="logo" href="goitbit.github.io">Matěj Goitka|</a>
     <div id="options">
+    <a id="darkmodeSwitch">Světlý režim</a>         
         <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
-     <a href="about" style="color:black; font-weight: bold;">O mně</a>
+     <a href="about" style="color:var(--font-color); font-weight: bold;">O mně</a>
      <a href="photos">Fotografie</a>
      <a href="apps">Aplikace</a>        
      <a href="#contact">Kontakt</a>
