--- a/nature.html
+++ b/nature.html
@@ -25,9 +25,10 @@ function myFunction() {
     <navbar id="navbar" class="topnav">
     <a id="logo" href="goitbit.github.io">Matěj Goitka|</a>
     <div id="options">
+    <a id="darkmodeSwitch">Světlý režim</a>         
         <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
      <a href="about">O mně</a>
-     <a href="photos" style="color:black; font-weight: bold;">Fotografie</a>
+     <a href="photos" style="color:var(--font-color); font-weight: bold;">Fotografie</a>
      <a href="apps">Aplikace</a>           
      <a href="#contact">Kontakt</a>
     </div>
