--- a/photos.html
+++ b/photos.html
@@ -13,19 +13,23 @@ function myFunction() {
   } else {
     x.className = "topnav";
   }
-} </script>
+}                     
+        
+</script>
 <!--        <script type="text/javascript" defer src="slideshow.js"></script>-->
 <!--        <script type="text/javascript" defer src="new-slideshow.js"></script>-->
         <script type="text/javascript" defer src="logo-animation.js"></script>
+        <script type="text/javascript" defer src="darkmode.js"></script>        
     </head>
     <body>
 <!--NAVBAR        -->
     <navbar id="navbar" class="topnav">
     <a id="logo" href="goitbit.github.io">Matěj Goitka|</a>
     <div id="options">
+        <button id="darkmodeSwitch" content="Režim">Světlý režim</button>    
     <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
      <a href="about">O mně</a>
-     <a href="photos" style="color:black; font-weight: bold;">Fotografie</a>
+     <a href="photos" style="color:var(--font-color); font-weight: bold;">Fotografie</a>
      <a href="apps">Aplikace</a>           
      <a href="#contact">Kontakt</a>
     </div>
