Added cropped photos

--- a/photos.html
+++ b/photos.html
@@ -40,12 +40,12 @@ function myFunction() {
     <h1 class="fotoheadline">Fotografie</h1>
         
     <a href="city" class="genrebox">
-    <img src="img6.jpg" class="genrefoto">        
+    <img src="img6-cropped.jpg" class="genrefoto">        
     <span class="genrecaption">CITY</span>    
     </a>
         
     <a href="nature" class="genrebox">
-    <img src="img11.jpg" class="genrefoto">        
+    <img src="img11-cropped.jpg" class="genrefoto">        
     <span class="genrecaption">NATURE</span>    
     </a>        
     </section>
