dark mode switch je tlačítko

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function myFunction() {
     <navbar id="navbar" class="topnav">
     <a id="logo" href="goitbit.github.io">Matěj Goitka|</a>
     <div id="options">
-    <a id="darkmodeSwitch">Světlý režim</a>  
+    <button id="darkmodeSwitch">Světlý režim</button>  
         <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>      
      <a href="about">O mně</a>
      <a href="photos">Fotografie</a>
