added dark mode in apps

--- a/apps.html
+++ b/apps.html
@@ -17,6 +17,7 @@ function myFunction() {
 <!--        <script type="text/javascript" defer src="slideshow.js"></script>-->
 <!--        <script type="text/javascript" defer src="new-slideshow.js"></script>-->
         <script type="text/javascript" defer src="logo-animation.js"></script>
+        <script type="text/javascript" defer src="darkmode.js"></script>            
     </head>
     <body>
 <!--NAVBAR        -->
