--- a/photos.html
+++ b/photos.html
@@ -7,8 +7,8 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <!--        <script type="text/javascript" defer src="slideshow.js"></script>-->
 <!--        <script type="text/javascript" defer src="new-slideshow.js"></script>-->
-        <script type="text/javascript" defer src="logo-animation.js"></script>
-        <script type="text/javascript" defer src="darkmode.js"></script>
+<!--        <script type="text/javascript" defer src="logo-animation.js"></script>
+        <script type="text/javascript" defer src="darkmode.js"></script> -->
         <script type="text/javascript" defer>/* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
 function myFunction() {
   var x = document.getElementById("navbar");
