--- a/apps.html
+++ b/apps.html
@@ -4,7 +4,7 @@
         <meta lang="cs">
         <meta charset="utf-8">
         <link rel="stylesheet" href="stylesheet.css">
-<meta name=”viewport” content=”width=device-width, initial-scale=1.0″>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script type="text/javascript" defer>/* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
 function myFunction() {
   var x = document.getElementById("navbar");
