--- a/city.html
+++ b/city.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="stylesheet.css">
          <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <script type="text/javascript" defer src="darkmode.js"></script>         
         <script type="text/javascript" defer>/* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
 function myFunction() {
   var x = document.getElementById("navbar");
@@ -25,7 +26,7 @@ function myFunction() {
     <navbar id="navbar" class="topnav">
     <a id="logo" href="goitbit.github.io">Matěj Goitka|</a>
     <div id="options">
-    <a id="darkmodeSwitch">Světlý režim</a>         
+    <button id="darkmodeSwitch">Světlý režim</button>         
         <a href="javascript:void(0);" class="icon" id="taikon" onclick="myFunction()">≡</a>
      <a href="about">O mně</a>
      <a href="photos" style="color:var(--font-color); font-weight: bold;">Fotografie</a>
