Added Contacts section, fixed headlines

--- a/apps.html
+++ b/apps.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Matěj Goitka</title>
+        <title>Matěj Goitka | Aplikace</title>
         <meta lang="cs">
         <meta charset="utf-8">
         <link rel="stylesheet" href="stylesheet.css">
@@ -29,13 +29,13 @@ function myFunction() {
      <a href="about">O mně</a>
      <a href="photos">Fotografie</a>
      <a href="apps" style="color:var(--font-color); font-weight: bold;">Aplikace</a>        
-     <a href="#contact">Kontakt</a>
+     <a href="contact">Kontakt</a>
     </div>
      </navbar>            
     <hr>    
 <!--OBSAH        -->
-    <h1 class="fotoheadline fade" style="text-align: center">Aplikace</h1>
-        
+
+    <h1 class="fotoheadline fade" style="text-align: center">Aplikace</h1>        
     <div id="appsection" class="fade">
         <div id="appbox">
         <a href="http:\\www.nulahra.wz.cz" target="_blank" class="justlink">    
