--- a/photos.html
+++ b/photos.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Matěj Goitka</title>
+        <title>Matěj Goitka | Fotografie</title>
         <meta lang="cs">
         <meta charset="utf-8">
         <link rel="stylesheet" href="stylesheet.css">
@@ -31,13 +31,13 @@ function myFunction() {
      <a href="about">O mně</a>
      <a href="photos" style="color:var(--font-color); font-weight: bold;">Fotografie</a>
      <a href="apps">Aplikace</a>           
-     <a href="#contact">Kontakt</a>
+     <a href="contact">Kontakt</a>
     </div>
      </navbar>            
     <hr>    
 <!--OBSAH        -->
+    <h1 class="fotoheadline fade">Fotografie</h1>        
     <section class="fotobox fade">
-    <h1 class="fotoheadline">Fotografie</h1>
         
     <a href="city" class="genrebox">
     <img src="img6-cropped.jpg" class="genrefoto">        
