--- a/city.html
+++ b/city.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Matěj Goitka</title>
+        <title>Matěj Goitka | City photos</title>
         <meta lang="cs">
         <meta charset="utf-8">
         <link rel="stylesheet" href="stylesheet.css">
@@ -31,7 +31,7 @@ function myFunction() {
      <a href="about">O mně</a>
      <a href="photos" style="color:var(--font-color); font-weight: bold;">Fotografie</a>
      <a href="apps">Aplikace</a>           
-     <a href="#contact">Kontakt</a>
+     <a href="contact">Kontakt</a>
     </div>
      </navbar>            
     <hr>    
