--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ function myFunction() {
      <a href="about">O mně</a>
      <a href="photos">Fotografie</a>
      <a href="apps">Aplikace</a>    
-     <a href="#contact">Kontakt</a>
+     <a href="contact">Kontakt</a>
     </div>
      </navbar>            
     <hr>    
