--- a/apps.html
+++ b/apps.html
@@ -38,7 +38,7 @@ function myFunction() {
     <h1 class="fotoheadline fade" style="text-align: center">Aplikace</h1>        
     <div id="appsection" class="fade">
         <div id="appbox">
-        <a href="http:\\www.nulahra.wz.cz" target="_blank" class="justlink">    
+        <a href="https://www.alik.cz/h/koko" target="_blank" class="justlink">    
         <img id="appimg" src="https://o00o.cz/obrazky/PY/XV/GTV-mensi.jpg">
         <img class="techlogo fade" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/600px-JavaScript-logo.png?20120221235433">              
         <h3 id="appheadline">Znič slepičku Koko!</h3>    
