--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ function myFunction() {
     <hr>    
 <!--OBSAH        -->
     <section id="intro" class="fade">
-    <h1 style="font-weight: 500; font-size:2rem; margin-bottom:0.5rem;">Programátor a fotograf pochybné kvality</h1>
+    <h1 style="font-weight: 500; font-size:2rem; margin-bottom:0.5rem;">Programátor a fotograf samouk</h1>
     <q class="quote">Zde by se hodilo napsat něco chytrého.</q>    
     </section>
         <br>
